# Drishtiksha

./: .gitignore  README.md  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.yml  docker-manager.ps1  pyproject.txt  start-fullstack.bat  start.ps1
Server/: .dockerignore  .env.example  .gitignore  ANALYSIS_MERGE_SUMMARY.md  COMPREHENSIVE_ANALYSIS_GUIDE.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  memory_diagnostic.py  predict_video_lstm.py  pyproject.toml  quick_memory_fix.py  test_analysis_merge.py  test_cli_imports.py  test_comprehensive_analysis.py  test_comprehensive_multi_model.py  test_device_config.py  test_device_fix.py  test_device_override.py  test_e2e_api.py  test_merged_analysis.py  test_simple.py  test_stats_endpoints.py  test_terminal_logging.py
Server/configs/: config.yaml  config_lstm.yaml
Server/models/: zaptrixio-cyber-drishtiksha-8a5edab282632443.txt
Server/scripts/: analyze_detectors.py  convert_weights.py  predict.py  validate_build.py
Server/src/: __init__.py  config.py  data_loader_lstm.py  model_lstm.py  plotting.py  train.py  utils.py
Server/src/app/: __init__.py  dependencies.py  main.py  main_broken.py  schemas.py  security.py
Server/src/cli/: __init__.py  config.py  main.py
Server/src/ml/: __init__.py  base.py  context_managers.py  correlation.py  event_publisher.py  exceptions.py  graceful_degradation.py  health_check.py  metric_schemas.py  registry.py  schemas.py  system_info.py  utils.py  warmup.py
Server/src/tests/: test_all_endpoints.py  test_all_models.py  test_colorcues_integration.py  test_comprehensive_endpoints.py  test_lstm_v3.py  test_model_methods.py  test_quick_fixes.py  test_server_health.py
(+391 files in other folders)
