[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=20.0.0",
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "hf-xet>=1.1.7",
    "huggingface-hub[hf-xet]>=0.34.4",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.5",
    "numpy==2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "protobuf>=6.31.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.1",
    "uvicorn[standard]>=0.35.0",
    "rich>=14.1.0",
    "facenet-pytorch>=2.5.3",
    "timm>=1.0.19",
    "imutils>=0.5.4",
    "numba==0.61.2",
    "llvmlite==0.44.0",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "kymatio>=0.3.0",
]
